<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:elevation="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/gato1"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/imgBone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bone"
                android:background="#fff"
                android:contentDescription="@string/image"
                />

            <TextView
                android:id="@+id/tvNameCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:textSize="25sp"
                android:text="@string/name"
                />

            <TextView
                android:id="@+id/tvRatingCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counter"
                android:paddingStart="150dp"
                android:textSize="25sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imgRating"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/like"
                android:paddingStart="20dp"
                android:contentDescription="@string/image"
                />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>